tests/neg/i19248/Scope.scala
object Scope {
}
object Foo { // error
}
